kubenetes/app.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: weather-app
  namespace: weather
spec:
  replicas: 2
  selector:
    matchLabels:
      app: weather-app
  template:
    metadata:
      labels:
        app: weather-app
    spec:
      containers:
        - name: weather-app
          image: rehunt671/weather-app:latest
          imagePullPolicy: Always
          ports:
            - containerPort: 8080
      restartPolicy: Always
---
apiVersion: v1
kind: Service
metadata:
  namespace: weather
  name: weather-service
spec:
  type: ClusterIP
  selector:
    app: weather-app
  ports:
    - protocol: TCP
      port: 8080
      targetPort: 8080
