kubenetes/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: weather-ingress
  namespace: weather
  annotations:
    nginx.ingress.kubernetes.io/proxy-body-size: 50m
    nginx.ingress.kubernetes.io/proxy-buffer-size: "64k"
    nginx.ingress.kubernetes.io/proxy-read-timeout: "600"
    cert-manager.io/cluster-issuer: letsencrypt-prod
spec:
  ingressClassName: nginx
  tls:
    - hosts:
        - weather-app.kingsglaive.me
      secretName: tls
  rules:
    - host: weather-app.kingsglaive.me
      http:
        paths:
          - path: /api
            pathType: Prefix
            backend:
              service:
                name: weather-service
                port:
                  number: 8080
